# early_stop

./: .gitignore  pyproject.toml
.cursor/rules/: optimize.mdc  optimize_features.mdc
src/: create_dataset.ipynb  custom_loss.jl  custom_loss.py  custom_loss_2.py  custom_loss_python.py  dataset.py  dataset_v2.py  dl_class.ipynb  dl_class.py  evaluation.py  extrapolator.py  features.py  generation.py  lossmoother.py  losstrapolator.py  prompt.md  prompt_template.md  pysr_optimization.py  runs_data.json  task_evaluation.py  task_optimization.py  task_visualization.ipynb  traditional_dashboard.ipynb  traditional_run.py  visualization.py
src/results/: constant_derivative.json  dummy.json
src/solutions/: constant_derivative.py  dummy.py
tests/: test_extrapolator.py  test_lossmoother.py  test_losstrapolator.py  test_pysr_optimization.py  test_task_optimization.py
tests/__snapshots__/: test_extrapolator.ambr  test_lossmoother.ambr  test_losstrapolator.ambr  test_pysr_optimization.ambr  test_task_optimization.ambr
