[project]
name = "early-stop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "marimo[recommended]>=0.17.8",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pysr>=1.5.9",
    "pytest>=9.0.1",
    "syrupy>=5.0.0",
    "watchdog>=6.0.0",
]

[tool.marimo.runtime]
watcher_on_save = "autorun"
